# os_lab1

./: CMakeLists.txt
src/: bmp_io.cpp  bmp_io.h  main.cpp
tests/: TestBMPStructs.h
